--- a/data/tabular/opv/meta.yaml
+++ b/data/tabular/opv/meta.yaml
@@ -5,20 +5,20 @@ description: |-
 targets:
     - id: PCE_max(%)
       description: Maximum power conversion efficiency of devices with this polymer
-      units: "%"
+      units: '%'
       type: continuous
       names:
           - noun: maximum power conversion efficiency of tested devices
           - noun: maximum achievable power conversion efficiency
       uris:
       significant_digits: 2
-      sample: False
+      sample: false
     - id: PCE_ave
-      description: Average power conversion efficiency of devices with this polymer 
-      units: "%"
-      names: 
-        - noun: power conversion efficiency (PCE)
-        - noun: power conversion efficiency
+      description: Average power conversion efficiency of devices with this polymer
+      units: '%'
+      names:
+          - noun: power conversion efficiency (PCE)
+          - noun: power conversion efficiency
       type: continuous
       significant_digits: 2
     - id: Voc
@@ -41,14 +41,14 @@ targets:
       significant_digits: 2
     - id: FF
       description: Fill factor of devices with this polymer
-      units: ""
+      units: ''
       type: continuous
       names:
           - noun: fill factor of tested devices
           - noun: fill factor
       uris:
       significant_digits: 2
-    - id: bandgap(eV)
+    - id: bandgap
       description: Bandgap of the polymer
       units: eV
       type: continuous
@@ -58,38 +58,46 @@ targets:
       uris:
       significant_digits: 2
     - id: HOMO
-      description: HOMO of the system, measured experimentally 
-      type: continuous 
+      description: HOMO of the system, measured experimentally
+      type: continuous
       units: eV
       significant_digits: 2
-      names: 
-        - highest-occupied molecular orbital energy 
-        - HOMO energy 
-        - highest-occupied molecular orbital (HOMO) energy 
-    - id: LUMO 
-      description: LUMO of the system, measured experimentally 
-      type: continuous 
+      names:
+          - noun: highest-occupied molecular orbital energy
+          - noun: HOMO energy
+          - noun: highest-occupied molecular orbital (HOMO) energy
+    - id: LUMO
+      description: LUMO of the system, measured experimentally
+      type: continuous
       units: eV
       significant_digits: 2
-      names: 
-        - lowest-unoccupied molecular orbital energy 
-        - LUMO energy 
-        - lowest-unoccupied molecular orbital (LUMO) energy 
+      names:
+          - noun: lowest-unoccupied molecular orbital energy
+          - noun: LUMO energy
+          - noun: lowest-unoccupied molecular orbital (LUMO) energy
 benchmarks: []
-links: 
-  - url: https://pubs.acs.org/doi/full/10.1021/acs.jpclett.8b00635
-    description: original data source
+links:
+    - url: https://pubs.acs.org/doi/full/10.1021/acs.jpclett.8b00635
+      description: original data source
 identifiers:
     - id: SMILES
       type: SMILES
       description: SMILES
     - id: Mw
       type: Other
-      description: molecular weight 
+      description: molecular weight
+      names:
+          - noun: molecular weight
+          - noun: molecular weight (Mw)
+          - noun: Mw
     - id: PDI
       type: Other
       description: polydispersity index
-license: 
+      names:
+          - noun: polydispersity index
+          - noun: polydispersity index (PDI)
+          - noun: PDI
+license:
 num_points: 1098
 bibtex:
     - |-
@@ -103,42 +111,55 @@ bibtex:
         number = {10},
         pages = {2639--2646},
         author = {Shinji Nagasawa and Eman Al-Naamani and Akinori Saeki},
-        title = {Computer-Aided Screening of Conjugated Polymers for Organic Solar Cell: 
+        title = {Computer-Aided Screening of Conjugated Polymers for Organic Solar Cell:
         Classification by Random Forest},
         journal = {J. Phys. Chem. Lett.}
       }
 templates:
-  - |- 
-    Question: What is the {PCE_ave__names__noun} of a {#non-fullerene|PC71BM|PCBM!} {#organic photovoltaics|OPV|organic solar cell|organic photovoltaics (OPV)!} device with a donor polymer with monomer SMILES {SMILES#} and {#Mw|weight-average molecular weight|weight-average molecular weight (Mw)!} {Mw#} g/mol and {#PDI|polydispersity index|polydispersity index (PDI)!} of {PDI#}?
-    Answer: {#The power conversion efficiency is |The PCE is!}{PCE_ave#} %.
-  - |-
-    Question: What is the {Voc__names__noun} of a {#non-fullerene|PC71BM|PCBM!} {#organic photovoltaics|OPV|organic solar cell|organic photovoltaics (OPV)!} device with a donor polymer with monomer SMILES {SMILES#} and {#Mw|weight-average molecular weight|weight-average molecular weight (Mw)!} {Mw#} g/mol and {#PDI|polydispersity index|polydispersity index (PDI)!} of {PDI#}?
-    Answer: {#The open-circuit voltage is |The Voc is!}{Voc#} {Voc__units}.
-  - |-
-    Question: What is the {Jsc__names_noun} of a {#non-fullerene|PC71BM|PCBM!} {#organic photovoltaics|OPV|organic solar cell|organic photovoltaics (OPV)!} device with a donor polymer with monomer SMILES {SMILES#} and {#Mw|weight-average molecular weight|weight-average molecular weight (Mw)!} {Mw#} g/mol and {#PDI|polydispersity index|polydispersity index (PDI)!} of {PDI#}?
-    Answer: {#The short-circuit current density is |The Jsc is!}{Jsc#} {Jsc__units}.
-  - |-
-    Question: What is the {FF__names__noun} of a {#non-fullerene|PC71BM|PCBM!} {#organic photovoltaics|OPV|organic solar cell|organic photovoltaics (OPV)!} device with a donor polymer with monomer SMILES {SMILES#} and {#Mw|weight-average molecular weight|weight-average molecular weight (Mw)!} {Mw#} g/mol and {#PDI|polydispersity index|polydispersity index (PDI)!} of {PDI#}?
-    Answer: {#The fill factor is |The FF is!}{FF#} {FF__units}.
-  - |-
-    Question: What is the {bandgap__names__noun} of a polymer with monomer SMILES {SMILES#}?
-    Answer: {#The bandgap is |The bandgap of the polymer is!}{bandgap#} {bandgap__units}.
-  - |-
-    Question: What is the {HOMO__names__noun} of a polymer with monomer SMILES {SMILES#}?
-    Answer: The {HOMO__names__noun} {#of the polymer|!} is {HOMO#} {HOMO__units}.
-  - |- 
-    Question: What is the {LUMO__names__noun} of a polymer with monomer SMILES {SMILES#}?
-    Answer: The {LUMO__names__noun} {#of the polymer|!} is {LUMO#} {LUMO__units}.
-  - The {#non-fullerene|PC71BM|PCBM!} {#organic photovoltaics|OPV|organic solar cell|organic photovoltaics (OPV)!} device with a donor polymer with monomer SMILES {SMILES#} and {#Mw|weight-average molecular weight|weight-average molecular weight (Mw)!} {Mw#} g/mol and {#PDI|polydispersity index|polydispersity index (PDI)!} of {PDI#} has a {PCE__names__noun} of {PCE#}%.
-  - The {#non-fullerene|PC71BM|PCBM!} {#organic photovoltaics|OPV|organic solar cell|organic photovoltaics (OPV)!} device with a donor polymer with monomer SMILES {SMILES#} and {#Mw|weight-average molecular weight|weight-average molecular weight (Mw)!} {Mw#} g/mol and {#PDI|polydispersity index|polydispersity index (PDI)!} of {PDI#} has a {Jsc__names__noun} of {Jsc} {Jsc__units}.
-  - The {#non-fullerene|PC71BM|PCBM!} {#organic photovoltaics|OPV|organic solar cell|organic photovoltaics (OPV)!} device with a donor polymer with monomer SMILES {SMILES#} and {#Mw|weight-average molecular weight|weight-average molecular weight (Mw)!} {Mw#} g/mol and {#PDI|polydispersity index|polydispersity index (PDI)!} of {PDI#} has a {FF__names__noun} of {FF}.
-  - |- 
-    User: I {#want to|would like to|aim to|wish to!} {#design|create|build!} {#non-fullerene|PC71BM|PCBM!} {#organic photovoltaics|OPV|organic solar cell|organic photovoltaics (OPV)!} device with a {PCE__names__noun} of {PCE#}%. 
-    Assistant: {#That's interesting.|Cool.|!} Do you have a donor polymer in mind?
-    User: Yes, I would like to use a polymer with monomer SMILES {SMILES#} and {#would like to|need to|must!} know the {PDIs__names__noun} and {MWs__names__noun} of the polymer I should use.
-    Assistant: {#I recommend|I suggest|I propose!} trying a {Mw__names__noun} of {Mw#} g/mol and {PDI__names__noun} of {PDI#}.
-  - |-
-    User: I {#want to|would like to|aim to|wish to!} {#design|create|build!} {#non-fullerene|PC71BM|PCBM!} {#organic photovoltaics|OPV|organic solar cell|organic photovoltaics (OPV)!} device with a {PCE__names__noun} of {PCE#}%. 
-    Assistant: {#That's interesting.|Cool.|!} Do you have additional constraints?
-    User: {#Yes, |Yeah, |Indeed, |!}I would like to have a {Jsc__names__noun} of {Jsc#} {Jsc__units}.
-    Assistant: {#I recommend|I suggest|I propose!} trying a {Mw__names__noun} of {Mw#} g/mol and {PDI__names__noun} of {PDI#} of a polymer with monomer SMILES {SMILES#}.
+    - |-
+      Question: What is the {PCE_ave__names__noun} of a {#non-fullerene|PC71BM|PCBM!} {#organic photovoltaics|OPV|organic solar cell|organic photovoltaics (OPV)!} device with a donor polymer with monomer SMILES {SMILES#} and {#Mw|weight-average molecular weight|weight-average molecular weight (Mw)!} {Mw#} g/mol and {#PDI|polydispersity index|polydispersity index (PDI)!} of {PDI#}?
+      Answer: {#The power conversion efficiency is |The PCE is!}{PCE_ave#} %.
+    - |-
+      Question: What is the {Voc__names__noun} of a {#non-fullerene|PC71BM|PCBM!} {#organic photovoltaics|OPV|organic solar cell|organic photovoltaics (OPV)!} device with a donor polymer with monomer SMILES {SMILES#} and {#Mw|weight-average molecular weight|weight-average molecular weight (Mw)!} {Mw#} g/mol and {#PDI|polydispersity index|polydispersity index (PDI)!} of {PDI#}?
+      Answer: {#The open-circuit voltage is |The Voc is!}{Voc#} {Voc__units}.
+    - |-
+      Question: What is the {Jsc__names__noun} of a {#non-fullerene|PC71BM|PCBM!} {#organic photovoltaics|OPV|organic solar cell|organic photovoltaics (OPV)!} device with a donor polymer with monomer SMILES {SMILES#} and {#Mw|weight-average molecular weight|weight-average molecular weight (Mw)!} {Mw#} g/mol and {#PDI|polydispersity index|polydispersity index (PDI)!} of {PDI#}?
+      Answer: {#The short-circuit current density is |The Jsc is!}{Jsc#} {Jsc__units}.
+    - |-
+      Question: What is the {FF__names__noun} of a {#non-fullerene|PC71BM|PCBM!} {#organic photovoltaics|OPV|organic solar cell|organic photovoltaics (OPV)!} device with a donor polymer with monomer SMILES {SMILES#} and {#Mw|weight-average molecular weight|weight-average molecular weight (Mw)!} {Mw#} g/mol and {#PDI|polydispersity index|polydispersity index (PDI)!} of {PDI#}?
+      Answer: {#The fill factor is |The FF is!}{FF#} {FF__units}.
+    - |-
+      Question: What is the {bandgap__names__noun} of a polymer with monomer SMILES {SMILES#}?
+      Answer: {#The bandgap is |The bandgap of the polymer is!}{bandgap#} {bandgap__units}.
+    - |-
+      Question: What is the {HOMO__names__noun} of a polymer with monomer SMILES {SMILES#}?
+      Answer: The {HOMO__names__noun} {#of the polymer|!} is {HOMO#} {HOMO__units}.
+    - |-
+      Question: What is the {LUMO__names__noun} of a polymer with monomer SMILES {SMILES#}?
+      Answer: The {LUMO__names__noun} {#of the polymer|!} is {LUMO#} {LUMO__units}.
+    - The {#non-fullerene|PC71BM|PCBM!} {#organic photovoltaics|OPV|organic solar cell|organic photovoltaics (OPV)!} device with a donor polymer with monomer
+      SMILES {SMILES#} and {#Mw|weight-average molecular weight|weight-average molecular weight (Mw)!} {Mw#} g/mol and {#PDI|polydispersity index|polydispersity
+      index (PDI)!} of {PDI#} has a {PCE_ave__names__noun} of {PCE_ave#}%.
+    - The {#non-fullerene|PC71BM|PCBM!} {#organic photovoltaics|OPV|organic solar cell|organic photovoltaics (OPV)!} device with a donor polymer with monomer
+      SMILES {SMILES#} and {#Mw|weight-average molecular weight|weight-average molecular weight (Mw)!} {Mw#} g/mol and {#PDI|polydispersity index|polydispersity
+      index (PDI)!} of {PDI#} has a {Jsc__names__noun} of {Jsc#} {Jsc__units}.
+    - The {#non-fullerene|PC71BM|PCBM!} {#organic photovoltaics|OPV|organic solar cell|organic photovoltaics (OPV)!} device with a donor polymer with monomer
+      SMILES {SMILES#} and {#Mw|weight-average molecular weight|weight-average molecular weight (Mw)!} {Mw#} g/mol and {#PDI|polydispersity index|polydispersity
+      index (PDI)!} of {PDI#} has a {FF__names__noun} of {FF#}.
+    - |-
+      User: I {#want to|would like to|aim to|wish to!} {#design|create|build!} {#non-fullerene|PC71BM|PCBM!} {#organic photovoltaics|OPV|organic solar cell|organic photovoltaics (OPV)!} device with a {PCE_ave__names__noun} of {PCE_ave#}%.
+      Assistant: {#That's interesting.|Cool.|!} Do you have a donor polymer in mind?
+      User: Yes, I would like to use a polymer with monomer SMILES {SMILES#} and {#would like to|need to|must!} know the {PDI__names__noun} and {Mw__names__noun} of the polymer I should use.
+      Assistant: {#I recommend|I suggest|I propose!} trying a {Mw__names__noun} of {Mw#} g/mol and a {PDI__names__noun} of {PDI#}.
+    - |-
+      User: I {#want to|would like to|aim to|wish to!} {#design|create|build!} {#non-fullerene|PC71BM|PCBM!} {#organic photovoltaics|OPV|organic solar cell|organic photovoltaics (OPV)!} device with a {PCE_ave__names__noun} of {PCE_ave#}%.
+      Assistant: {#That's interesting.|Cool.|!} Do you have additional constraints?
+      User: {#Yes, |Yeah, |Indeed, |!}I would like to have a {Jsc__names__noun} of {Jsc#} {Jsc__units}.
+      Assistant: {#I recommend|I suggest|I propose!} trying a {Mw__names__noun} of {Mw#} g/mol and {PDI__names__noun} of {PDI#} of a polymer with monomer SMILES {SMILES#}.
+    - |-
+      User: Can you {#recommend|suggest|propose!} a donor polymer for a {#non-fullerene|PC71BM|PCBM!} {#organic photovoltaics|OPV|organic solar cell|organic photovoltaics (OPV)!} device with a {PCE_ave__names__noun} of {PCE_ave#}% and a {Jsc__names__noun} of {Jsc#} {Jsc__units}?
+      Assistant: {#I recommend|I suggest|I propose!} trying a {Mw__names__noun} of {Mw#} g/mol and {PDI__names__noun} of {PDI#} of a polymer with monomer SMILES {SMILES#}.
+    - |-
+      Task: Predict the {PCE_ave__names__noun} of a {#non-fullerene|PC71BM|PCBM!} {#organic photovoltaics|OPV|organic solar cell|organic photovoltaics (OPV)!} device based on a description of the donor polymer.
+      Description: The donor polymer has monomer SMILES {SMILES#} and {#Mw|weight-average molecular weight|weight-average molecular weight (Mw)!} {Mw#} g/mol and {#PDI|polydispersity index|polydispersity index (PDI)!} of {PDI#}.
+      Solution: {#The power conversion efficiency is |The PCE is!}{PCE_ave#} %.
